# speech-therapy

./: README.md
backend/: pyproject.toml
backend/app/: app.py
frontend/src/components/: AudioRecorder.tsx  TaskContainer.tsx
frontend/src/pages/: _app.tsx  index.tsx
