[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Building a speech tutor for people with speech impediment"
authors = ["Jose Pujol <josepujol21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
